fix - overflow hidden bug fix

--- a/codement/codem/static/css/codement_20.css
+++ b/codement/codem/static/css/codement_20.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: clip;
+  
 }
 
 body {
